Add example